[tool.poetry]
name = "gabber"
version = "0.1.2"
description = "Gabber is a tool for scraping and analyzing Gab posts."
authors = ["R. Miles McCain <mccain@stanford.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
click = "^8.0.1"
python-dateutil = "^2.8.2"
loguru = "^0.6.0"
tqdm = "^4.62.1"
ratelimit = "^2.2.1"
beautifulsoup4 = "^4.10.0"
undetected-chromedriver = "^3.1.5"
selenium = "^4.3.0"
curl-cffi = "^0.5.3"

[tool.poetry.dev-dependencies]
black = "^21.7b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gabber = "gabber.client:cli_entrypoint"
