[tool.poetry]
name = "gabber"
version = "0.1.3"
description = "Gabber is a tool for scraping and analyzing Gab posts."
authors = ["R. Miles McCain <mccain@stanford.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.9,<3.12"
requests = "^2.32.3"
click = "^8.1.8"
python-dateutil = "^2.9.0.post0"
loguru = "^0.7.3"
tqdm = "^4.67.1"
ratelimit = "^2.2.1"
beautifulsoup4 = "^4.13.3"
undetected-chromedriver = "^3.5.5"
selenium = "^4.28.1"
curl-cffi = "^0.9.0"
retry = "^0.9.2"
nodriver = "^0.39"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gabber = "gabber.client:cli_entrypoint"
